Bug 29518 - [r300g] [regression] Depth clamping broke Regnum Online
Summary: [r300g] [regression] Depth clamping broke Regnum Online
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/r300 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL: http://www.regnumonline.com.ar/
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-11 15:28 UTC by Sven Arvidsson
Modified: 2010-08-12 18:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screenshot of RO (320.52 KB, image/png)
2010-08-11 15:28 UTC, Sven Arvidsson
Details

Description Sven Arvidsson 2010-08-11 15:28:07 UTC
Created attachment 37802 [details]
Screenshot of RO

Lately I have noticed that the game Regnum Online have regressed, it has never worked perfectly (see bug 28847) but now it's only rendering garbage.

Bisecting leads to this:

ca7ead03da4481cd34933175898f4a924e588ad4 is the first bad commit
commit ca7ead03da4481cd34933175898f4a924e588ad4
Author: Marek Olšák <maraeo@gmail.com>
Date:   Tue Jul 20 16:37:22 2010 +0200

    r300g: implement depth clamp
    
    Depth clamping seems to be implicit if clipping is disabled.
    
    It's not perfect, but it's good enough for wine and passes
    the corresponding piglit tests.

:040000 040000 2c23739a006e4151928169bfb4da12b323c4d2c7 bcd5168351aa7e5b75ed39bdea8e7e7eb5caf2ed M	src

I have confirmed the problem by reverting said commit.
Comment 1 Marek Olšák 2010-08-11 18:37:28 UTC
It's rendering only garbage here, with or without that patch.
Comment 2 Sven Arvidsson 2010-08-12 05:41:05 UTC
In that case you're probably running it with the shader backend, you need to change it to the fixed function pipeline (in the options).
Comment 3 Marek Olšák 2010-08-12 18:12:22 UTC
Depth clamp disabled by commit 16e782b83f298fcf82bbb277690ac0c713e90e21. Closing..


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.