r300g: disable depth clamp for now

It breaks Regnum Online in that it renders random triangles
all over the screen.

https://bugs.freedesktop.org/show_bug.cgi?id=29518